use pattern variables more